add: lesson3 complete file and lesson4 starting files

--- a/Lesson1&2/chatbot.html
+++ b/Lesson1&2/chatbot.html
@@ -35,9 +35,9 @@
            const role=props.role;  
            return (
                <div>
-                    {role=="bot" && <img src="/robot.png" alt="userimg" width="30" height="30"/> }
+                    {role=="bot" && <img src="//Lesson1&2/robot.png" alt="userimg" width="30" height="30"/> }
                     {message}
-                    {role=="user" &&<img src="/user.png" alt="userimg" width="30" height="30"/> }
+                    {role=="user" &&<img src="//Lesson1&2/user.png" alt="userimg" width="30" height="30"/> }
                </div>
            )
        }
